Changelog
=========

4.3.1 (unreleased)
------------------

- Only show document byline to users with edit permission. Refs #16920
- Moved "Datenschutz" link to footer. Refs #17066
- Fixed publication links being cached in context of wrong portal. Refs #16548


4.3.0 (2018-03-05)
------------------

Fixed:

- Advanced search is accessible as anonymous.
  Technical: registry.get() was throwing Unauthorized. Refs #16173
  [reinhardt]
- Make sure navigation does not float. Refs #16289
  [reinhardt]
- Firefox: Make sure first heading in document does not float. Refs #16289
  [reinhardt]
- Participating journals: Links don't jump between portals.
  Technical: Use full absolute_url in getPublications(). Refs #16175
  [reinhardt]

Changed:

- Metadata accordion: removed GIFs; added styling for SVGs. Refs #16175
  [reinhardt]
- Homepage View: Allowed overriding review languages. Refs #16527
  [reinhardt]



4.2.2 (2018-01-18)
------------------

- Added social media buttons. Refs #16159
  [reinhardt]
- Replaced FontAwesome characters with inline SVGs. Refs #16405
  [reinhardt]


4.2.1 (2017-11-16)
------------------

- External full text: adjusted padding. Refs #16044
  [reinhardt]
- search_rss must be called on navigation root. Refs #15955
  [reinhardt]
- Authorsearch: Only show authors of published content. Refs #16044
  [reinhardt]
- Search: Improved layout for default content types. Refs #16044
  [reinhardt]
- Search: Support disabling thematic search section. Refs #16044
  [reinhardt]


4.2.0 (2017-09-21)
------------------

- Removed legend from author search. Refs #15699
  [reinhardt]
- Pull in logo link so we can make it point to the portal URL. Refs #15816
  [reinhardt]
- Dynamic portal title in author search. Refs #15699
  [reinhardt]
- Added datenschutz view that displays Piwik opt-out. Refs #15889
  [reinhardt]
- Removed references to presentations. Refs #15699
  [reinhardt]


4.1.2 (2017-06-12)
------------------

- Removed tab "Zitierhinweise". Refs #15418