@@ -7,6 +7,7 @@ Changelog
 - Only show document byline to users with edit permission. Refs #16920
 - Moved "Datenschutz" link to footer. Refs #17066
 - Fixed publication links being cached in context of wrong portal. Refs #16548
+- Redirect to the correct portal. Refs #16548
 
 
 4.3.0 (2018-03-05)
